workloads/sftpgo/kustomize/overlays/prod/gateway-patch.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute

metadata:
  name: sftpgo-https

spec:
  hostnames:
    - sftpgo.sidewinder.lan

  rules:
    - backendRefs:
        - name: sftpgo-prod # SVC name (internal IP:PORT).
          port: 80
      timeouts:
          request: 600s # 10 minute timeout for large files being uploaded.
          backendRequest: 600s # 10 minute timeout for large files being uploaded.
      matches:
        - path:
            type: PathPrefix
            value: /

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute

metadata:
  name: sftpgo-http

spec:
  hostnames:
    - sftpgo.sidewinder.lan
